# claude-md-transcripts

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
claude_md_transcripts/: __init__.py  cli.py  discovery.py  exporter.py  frontmatter.py  paths.py  picker.py  qmd.py  reader.py  render.py  schema.py  slug.py  smart_slug.py  sync.py
docs/superpowers/plans/: 2026-05-05-strip-qmd-integration.md
docs/superpowers/specs/: 2026-05-05-strip-qmd-design.md
scripts/: cleanup_smart_title_pollution.py
tests/: test_cli.py  test_discovery.py  test_exporter.py  test_frontmatter.py  test_paths.py  test_picker.py  test_qmd.py  test_reader.py  test_render.py  test_retitle.py  test_schema.py  test_slug.py  test_smart_slug.py  test_sync.py
tests/fixtures/: sample_session.jsonl
